# hsr_navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml
bagfiles/: obstacles.bag
config/: clutter_planner_params.hpp  costmap_common_params.yaml  dwa_parameters.hpp  navigation_params.hpp  parameters.h  parameters.hpp  planner_parameters.hpp
data/: train.py
data/images/: image1.xml  image10.xml  image100.xml  image101.xml  image102.xml  image103.xml  image104.xml  image105.xml  image106.xml  image107.xml  image108.xml  image109.xml  image11.xml  image110.xml  image111.xml  image112.xml  image113.xml  image114.xml  image115.xml  image116.xml  image117.xml  image118.xml  image119.xml  image12.xml  image120.xml  image121.xml  image122.xml  image123.xml  image124.xml  image125.xml  image126.xml  image127.xml  image128.xml  image129.xml  image13.xml  image130.xml  image131.xml  image132.xml  image133.xml  image134.xml  (+448 more)
include/: clutter_planner.hpp  cnn_clutter.hpp  control.hpp  dynamic_window_approach.hpp  navigation.hpp  perception.hpp  planner.hpp
launch/: hsr_navigation.launch  hsr_planner.launch  move_base.launch  spawn_bottle_with_marker.launch
map/: hsr_map_test.yaml
msg/: ClutterPlannerServiceReq.msg  ClutterPlannerServiceResp.msg  ObjectMessage.msg  PlannerServiceReq.msg  PlannerServiceResp.msg  Points.msg  Points2D.msg
params/: costmap_common_params.yaml  global_costmap_params.yaml  hsr_dwa_planner.yaml  local_costmap_params.yaml
scripts/: action.py  check.py  color_tuning.py  detection.py  grasp.py
scripts/images/: image1.xml  image10.xml  image100.xml  image101.xml  image102.xml  image103.xml  image104.xml  image105.xml  image106.xml  image107.xml  image108.xml  image109.xml  image11.xml  image110.xml  image111.xml  image112.xml  image113.xml  image114.xml  image115.xml  image116.xml  image117.xml  image118.xml  image119.xml  image12.xml  image120.xml  image121.xml  image122.xml  image123.xml  image124.xml  image125.xml  image126.xml  image127.xml  image128.xml  image129.xml  image13.xml  image130.xml  image131.xml  image132.xml  image133.xml  image134.xml  (+167 more)
src/: clutter_planner.cpp  cnn_clutter.cpp  control.cpp  dynamic_window_approach.cpp  navigation.cpp  perception.cpp  planner.cpp
srv/: ClutterPlannerService.srv  DetectionService.srv
