<?xml version="1.0"?>
<package format="2">
  <license>BSD</license>
  <version>0.0.0</version>
  <name>hsr_navigation</name>
  <description>Navigation package for the HSR robot by Toyota.</description>
  <maintainer email="itaouil95@gmail.com">Ilyass Taouil</maintainer>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <!-- Build Tool Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>dwa_local_planner</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Build Export Dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>dwa_local_planner</build_export_depend>

  <!-- Execution Dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
</package>
